--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,30 +6,17 @@
 }
 
 body {
-  background: var(--background);
+  background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  transition: all 0.3s ease-in-out; /* Apply transition to all properties */
 }
 
-[data-theme] {
-  transition:
-    --primary-color 0.3s ease,
-    --primary-hover-color 0.3s ease,
-    --ring-color 0.3s ease,
-    --secondary-button-bg 0.3s ease,
-    --secondary-button-text 0.3s ease,
-    --card-background 0.3s ease,
-    --border-color 0.3s ease,
-    --input-background 0.3s ease,
-    --text-muted 0.3s ease,
-    --text-completed 0.3s ease,
-    --yellow-color 0.3s ease,
-    --yellow-hover-color 0.3s ease,
-    --red-color 0.3s ease,
-    --red-hover-color 0.3s ease,
-    --blue-tag-bg 0.3s ease,
-    --blue-tag-text 0.3s ease;
+*,
+::before,
+::after {
+  transition-property: background-color, border-color, color, fill, stroke;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.3s;
 }
 
 /* Light Mode Base Variables */
